--- a/src/components/carrousel/Carrousel.css
+++ b/src/components/carrousel/Carrousel.css
@@ -4,6 +4,8 @@
     overflow-x: scroll;
     scroll-behavior:smooth;
     position: relative;
+    overflow-y: hidden;
+    padding: 1% 2% 2% 2%;
 }
 .carrousel-title{
     color: #fff;
@@ -49,6 +51,8 @@
     /* Position the tooltip text - see examples below! */
     position: absolute;
     z-index: 1;
+    text-align: left;
+
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
