--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -6,6 +6,7 @@
     overflow-x: hidden;
     position: relative;
     scroll-behavior:smooth;
+    padding: 1% 2% 1% 2%;
 }
 .slider-controls{
     position: absolute;
