--- a/src/components/slider/SliderElement.css
+++ b/src/components/slider/SliderElement.css
@@ -44,7 +44,6 @@
     font-size: 1rem;
     margin-top: 0;
 }
-
 .slider-img {
     position: relative;
     height: 15vh;
@@ -68,3 +67,30 @@
     /*margin-left: 10%;*/
     margin: 0 10px;
 }
+
+@media only screen and (max-width: 600px) {
+    
+    .slider-info h3{
+        font-size: 1.5em;
+    }
+    .slider-info h4{
+        font-family: "Roboto", ui-serif;
+        font-size: 1em;
+        margin: 10px 0;
+    }
+    .slider-info p{
+        opacity: .8;
+        font-size: .8rem;
+        margin-bottom: 0;
+    }
+    .slider-trailer{
+        font-size: 1rem;
+        margin-top: 0;
+    }
+    .slider-trailer h4{
+        font-size: 1rem;
+    }
+}
+
+
+
